[gd_scene load_steps=10 format=3 uid="uid://2cx8oftx0wyb"]

[ext_resource type="MeshLibrary" uid="uid://cged7wuhys7i4" path="res://tileset.tres" id="1_1oxy5"]
[ext_resource type="PackedScene" uid="uid://cfhcy35dvdmqt" path="res://scenes/world_environment.tscn" id="1_ijdoy"]
[ext_resource type="PackedScene" uid="uid://73xrkxb5eosb" path="res://scenes/spider.tscn" id="2_xkjd8"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_yoexd"]
[ext_resource type="Texture2D" uid="uid://h075xb1bu3ns" path="res://icon.svg" id="3_fd1d3"]
[ext_resource type="Shader" uid="uid://b1dhbhg6xqy2v" path="res://shaders/pixelation.tres" id="3_mymvn"]
[ext_resource type="Theme" uid="uid://b813frhgu7qyi" path="res://ui/theme.tres" id="6_f4ebw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w3i7c"]
shader = ExtResource("3_mymvn")
shader_parameter/Pixelisation = 512.0

[sub_resource type="LabelSettings" id="LabelSettings_l4mbv"]
font_size = 48

[node name="Menu" type="Node3D"]

[node name="Background" type="Node3D" parent="."]

[node name="WorldEnvironment" parent="Background" instance=ExtResource("1_ijdoy")]

[node name="Camera3D" type="Camera3D" parent="Background"]
transform = Transform3D(0.965926, -0.0925078, 0.241722, 0, 0.933943, 0.357423, -0.258819, -0.345244, 0.902119, 2, 2.68079, 4.67187)

[node name="GridMap" type="GridMap" parent="Background"]
mesh_library = ExtResource("1_1oxy5")
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 0, 2, 0, 0, 2, 65535, 65535, 2, 0, 65535, 2, 65535, 65534, 2, 0, 65534, 2, 1, 65534, 2, 1, 65535, 2, 1, 0, 2, 1, 1, 2, 0, 1, 2, 65535, 1, 2, 65534, 1, 2, 65534, 0, 2, 65534, 65535, 2, 65534, 65534, 2, 65533, 65535, 1048576, 65533, 0, 1048576, 65533, 1, 1048576, 65533, 65534, 1048576, 65534, 65533, 0, 65535, 65533, 0, 0, 65533, 0, 2, 65534, 1441792, 2, 65535, 1441792, 2, 0, 1441792, 0, 2, 655360, 65535, 2, 655360, 65534, 2, 655360, 1, 2, 655360, 2, 1, 1441792, 1, 65533, 0, 65533, 65533, 1048577, 65533, 2, 655361, 2, 2, 1441793, 2, 65533, 1)
}

[node name="Spider" parent="Background" instance=ExtResource("2_xkjd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.527391, -2.5284)

[node name="Spider2" parent="Background" instance=ExtResource("2_xkjd8")]
transform = Transform3D(0.917734, 0, -0.397196, 0, 1, 0, 0.397196, 0, 0.917734, 2.5423, 0.527391, 0.185968)

[node name="Spider3" parent="Background" instance=ExtResource("2_xkjd8")]
transform = Transform3D(0.779119, 0, 0.626876, 0, 1, 0, -0.626876, 0, 0.779119, -3.71366, 0.527391, -2.64503)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_w3i7c")
scale = Vector2(15, 8.4375)
texture = ExtResource("3_fd1d3")
centered = false

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_f4ebw")
script = ExtResource("2_yoexd")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 204.0
offset_top = -155.0
offset_right = 640.0
offset_bottom = 156.0
grow_vertical = 2

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "ARACHNOMISIA"
label_settings = SubResource("LabelSettings_l4mbv")

[node name="MainMenu" type="PanelContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/MainMenu/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="UI/VBoxContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Play"

[node name="Settings" type="Button" parent="UI/VBoxContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"

[node name="Exit" type="Button" parent="UI/VBoxContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="SettingsMenu" type="PanelContainer" parent="UI/VBoxContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer/SettingsMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/SettingsMenu/MarginContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="UI/VBoxContainer/SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="UI/VBoxContainer/SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="UI/VBoxContainer/SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="UI/VBoxContainer/SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="UI/VBoxContainer/SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="pressed" from="UI/VBoxContainer/MainMenu/MarginContainer/VBoxContainer/Play" to="UI" method="_on_play_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MainMenu/MarginContainer/VBoxContainer/Settings" to="UI" method="_on_settings_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MainMenu/MarginContainer/VBoxContainer/Exit" to="UI" method="_on_exit_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/SettingsMenu/MarginContainer/VBoxContainer/Back" to="UI" method="_on_settings_back_pressed"]
